PAYMENT-misc-43a18.26: Switched WebMoney to xSolla

--- a/design/templates/OpenGame/_page_90_footer.tpl.html
+++ b/design/templates/OpenGame/_page_90_footer.tpl.html
@@ -7,7 +7,7 @@
           </div> <!-- __addition_wrapper -->
         </div> <!-- __content_wrapper -->
       </div><!-- __navbar_wrapper -->
-          </td></tr></table>
+          </td></tr></table> <!-- <table class="markup" width="100%"> -->
     </div><!-- __page -->
 
     <div id="debug" style="text-align: left"></div>
