ADMIN-misc-43a19.13: Now Ally's text on Admin page displayed formatted

--- a/design/templates/OpenGame/admin/admin_ally_one.tpl.html
+++ b/design/templates/OpenGame/admin/admin_ally_one.tpl.html
@@ -22,7 +22,7 @@
   </tr>
   <tr>
     <td>DESCRIPTION</td>
-    <td>{DESCRIPTION}</td>
+    <td class="c_c">{DESCRIPTION_HTML}</td>
   </tr>
   <tr>
     <td>WEB_PAGE</td>
@@ -30,7 +30,7 @@
   </tr>
   <tr>
     <td>TEXT_INTERNAL</td>
-    <td>{TEXT_INTERNAL}</td>
+    <td class="c_c">{TEXT_INTERNAL_HTML}</td>
   </tr>
   <tr>
     <td>HAVE_LOGO</td>
