MOD-misc-44a10: Compatibilty with 'ad_promo_codes'

--- a/design/templates/OpenGame/options.tpl.html
+++ b/design/templates/OpenGame/options.tpl.html
@@ -457,7 +457,7 @@
   </div>
 
   <br/>
-  <input value="{L_save_settings}" type="submit" id="save_settings" />
+  <input value="{L_save_settings}" type="submit" name="save_settings" id="save_settings" />
 </form>
 
 <script type="text/javascript">
