ADMIN-feat-44a25: Added player activit log to admin

--- a/design/templates/OpenGame/admin/admin_user.tpl.html
+++ b/design/templates/OpenGame/admin/admin_user.tpl.html
@@ -1,5 +1,7 @@
 <h2>{PAGE_HEADER}</h2>
 
+<h3><a href="admin/admin_user_activity.php?id={USER_ID}" class="link">Посмотреть активность игрока</a></h3>
+
 <form action="" method="get">
   <input type="hidden" name="page" value="admin/user_view"/>
   <input type="hidden" name="uid" value="{USER_ID}"/>
