ADMIN-misc-44a27: Admin/Playe activity - misc changes

--- a/design/templates/OpenGame/admin/admin_user_activity.tpl.html
+++ b/design/templates/OpenGame/admin/admin_user_activity.tpl.html
@@ -26,8 +26,8 @@
   {
     padding: 0;
     border: 0;
-    margin-left: 25%;
-    width: 50%;
+    margin: 0;
+    width: 100%;
     background-color: red
   }
 
@@ -58,10 +58,10 @@
 
 <div class="activity header">
   <div class="none"></div>&nbsp;- Нет активности&nbsp;
-  <div class="present"></div>&nbsp;- Есть активность
+  <div class="present"></div>&nbsp;- Есть активность (красный - % активности периода)
 </div><br/>
 
-<h3>Навестись мышкой на квадрат - время и длительность (если есть активность)</h3>
+<h3>1 ячейка - 1 час. Навестись мышкой на ячейку - время и длительность (если есть активность)</h3>
 
 { Records found: } {RECORDS}<br/><br/>
 
