ALLY-misc-44a100: Added link to Allie's stat page list

--- a/design/templates/OpenGame/ali_search.tpl.html
+++ b/design/templates/OpenGame/ali_search.tpl.html
@@ -6,7 +6,13 @@
       <input type="text" name="searchtext" value="{SEARCH_TEXT}" size=50>&nbsp;&nbsp;<input type="submit" value="{L_ali_search_action}">
     </form></th>
   </tr>
-  <tr><td colspan="2" class="c">{L_ali_search_tip}</td></tr>
+  <tr>
+    <th colspan="2" class="c_c">
+      {L_ali_search_tip}<br/>
+      <a href="stat.php?type=0&who=2&range=1" class="link warning">{L_ali_search_show_all}</a>
+    </th>
+  </tr>
+  <tr><td colspan="2" class="c"></td></tr>
 </table>
 
 <!-- IF SEARCH_TEXT -->
