PAYMENT-mod-44a102: Support for module `payment_interkassa_form`

--- a/design/templates/OpenGame/metamatter.tpl.html
+++ b/design/templates/OpenGame/metamatter.tpl.html
@@ -6,7 +6,7 @@
   <h1>{PAGE_HEADER}</h1>
 <!-- ENDIF -->
 
-<!-- INCLUDE _result_message -->
+<!-- _INCLUDE _result_message -->
 
 <script type="text/javascript">
   var LA_sys_show = "{LA_sys_show}";
