PM-feat-45a8: 'Ignore' feature for PM. New look of messages

--- a/design/css/global.css
+++ b/design/css/global.css
@@ -282,7 +282,7 @@ textarea {
 /* Containers ======================================================================================================= */
 /* Container Flex - Base Flex Container */
 /* One-line vertically centered, space distributed non-wrapping  */
-.contF, .contFJ, .contFS, .contFC {
+.contF, .contFJ, .contFS, .contFC, .contFE {
   display: flex;
 
   justify-content: space-around;
@@ -392,7 +392,6 @@ body.blitz_ {
 .no_select {
   -webkit-touch-callout: none; /* iOS Safari */
   -webkit-user-select: none; /* Safari */
-  -khtml-user-select: none; /* Konqueror HTML */
   -moz-user-select: none; /* Firefox */
   -ms-user-select: none; /* Internet Explorer/Edge */
   user-select: none; /* Non-prefixed version, currently supported by Chrome and Opera */
