--- a/design/templates/OpenGame/login_body.tpl.html
+++ b/design/templates/OpenGame/login_body.tpl.html
@@ -1,7 +1,8 @@
 <script type="text/javascript">
-  // var password, password2;
-  var L_sys_login_password_show = '{LA_sys_login_password_show}';
-  var L_sys_login_password_hide = '{LA_sys_login_password_hide}';
+  $.extend(language, {
+    sys_login_password_show: '{LA_sys_login_password_show}',
+    sys_login_password_hide: '{LA_sys_login_password_hide}',
+  });
 </script>
 
 <div id="log_main">
