--- a/design/templates/OpenGame/page_hint.tpl.html
+++ b/design/templates/OpenGame/page_hint.tpl.html
@@ -8,7 +8,7 @@
 <br>
 <!--<div style="width: &lt;!&ndash; IF PAGE_HINT_WIDTH &ndash;&gt;{PAGE_HINT_WIDTH}&lt;!&ndash; ELSE &ndash;&gt;47rem&lt;!&ndash; ENDIF &ndash;&gt;;">-->
 <div style="max-width: 50em; min-width: 20em;">
-  <table width="100%" border="0" cellpadding="0" cellspacing="1">
+  <table width="100%" border="0" cellpadding="0" cellspacing="1" class="border_image_small">
     <tr><th class="c_c  neutral">{L_sys_hint}</th></tr>
     <tr><td><div class="hint warning">{$PAGE_HINT}</div></td></tr>
   </table>
