ALLY-misc-45a16: 'Recommended Alliances' list now displayed w/o search

--- a/design/templates/OpenGame/ali_search.tpl.html
+++ b/design/templates/OpenGame/ali_search.tpl.html
@@ -15,7 +15,7 @@
   <tr><td colspan="2" class="c"></td></tr>
 </table>
 
-<!-- IF SEARCH_TEXT -->
+<!-- IF SEARCH_TEXT || .alliances -->
 <br />
 <table width=519>
   <tr class="c_c">
