TEMPLATE-code-45a26: More refactoring for templates. Code to support template switching. Template inheritance

--- a/design/templates/OpenGame/_page_20_header.tpl.html
+++ b/design/templates/OpenGame/_page_20_header.tpl.html
@@ -54,7 +54,7 @@
     <!-- ENDIF -->
 
     <script type="text/javascript" src="{D_SN_ROOT_VIRTUAL}js/lib/jquery.js?{C_var_db_update}"></script>
-    <script type="text/javascript" src="{D_SN_ROOT_VIRTUAL}js/lib/js.cookie.js?{C_var_db_update}"></script>
+    <script type="text/javascript" src="{D_SN_ROOT_VIRTUAL}js/lib/js.cookie.min.js?{C_var_db_update}"></script>
     <script type="text/javascript">
       var SN_SOUND_ENABLED = parseInt('{SOUND_ENABLED}') ? parseInt('{SOUND_ENABLED}') : 0;
       var PLAYER_OPTION_ANIMATION_DISABLED = parseInt('{PLAYER_OPTION_ANIMATION_DISABLED}') ? parseInt('{PLAYER_OPTION_ANIMATION_DISABLED}') : 0;
