CODE-misc-45a30: Code refactoring

--- a/design/templates/OpenGame/_page_20_header.tpl.html
+++ b/design/templates/OpenGame/_page_20_header.tpl.html
@@ -43,7 +43,7 @@
     <!-- DEFINE $BODY_CLASS_AUTH = 'body-auth' -->
   <!-- ENDIF -->
 
-  <body class="style {$PLAYER_OPTION_DESIGN_DISABLE_BORDERS} {GAME_MODE_CSS_PREFIX}{$BODY_CLASS_AUTH}">
+  <body class="style {$PLAYER_OPTION_DESIGN_DISABLE_BORDERS} {GAME_MODE_CSS_PREFIX}{$BODY_CLASS_AUTH} {SN_TEMPLATE_NAME}">
     <script type="text/javascript">
       // Этот скрипт находится здесь, потому что он должен быть выполнен максимально быстро
       var timeBrowser = new Date();
