--- a/design/templates/OpenGame/navbar_resources_flex.tpl.html
+++ b/design/templates/OpenGame/navbar_resources_flex.tpl.html
@@ -18,7 +18,7 @@
         <div class="navbar_resource_image"><img class="image_close" src="design/images/icon_metal.png"/></div>
 
         <div>
-          <div id="top_metal">
+          <div class="top_metal_v2">
             {PLANET_METAL_TEXT}
           </div>
 
@@ -41,7 +41,7 @@
         <div class="navbar_resource_image"><img class="image_close" src="design/images/icon_crystal.png"/></div>
 
         <div>
-          <div id='top_crystal'>
+          <div class="top_crystal_v2">
             {PLANET_CRYSTAL_TEXT}
           </div>
 
@@ -66,7 +66,7 @@
         <div class="navbar_resource_image"><img class="image_close" src="design/images/icon_deuterium.png"/></div>
 
         <div>
-          <div id='top_deuterium'>
+          <div class="top_deuterium_v2">
             {PLANET_DEUTERIUM_TEXT}
           </div>
 
