--- a/design/templates/OpenGame/navbar_resources_horizontal.tpl.html
+++ b/design/templates/OpenGame/navbar_resources_horizontal.tpl.html
@@ -12,9 +12,9 @@
 
 <tr class="c_r">
   <th class="c_l" nowrap>{L_tech_storage}</th>
-  <td id='top_metal' data-resource="metal">{PLANET_METAL_TEXT}</td>
-  <td id='top_crystal' data-resource="crystal">{PLANET_CRYSTAL_TEXT}</td>
-  <td id='top_deuterium' data-resource="deuterium">{PLANET_DEUTERIUM_TEXT}</td>
+  <td class='top_metal_v2' data-resource="metal">{PLANET_METAL_TEXT}</td>
+  <td class='top_crystal_v2' data-resource="crystal">{PLANET_CRYSTAL_TEXT}</td>
+  <td class='top_deuterium_v2' data-resource="deuterium">{PLANET_DEUTERIUM_TEXT}</td>
   <!-- IF $NAVBAR_RESOURCES_ALLY -->
   <td id='top_dark_matter'>{DARK_MATTER_TEXT}</td>
   <!-- ELSE -->
