--- a/design/templates/OpenGame/navbar_resources_vertical.tpl.html
+++ b/design/templates/OpenGame/navbar_resources_vertical.tpl.html
@@ -11,7 +11,7 @@
 
 <tr class="c_r" data-resource="metal">
   <th class="c_l">{L_sys_metal}</th>
-  <td id='top_metal'>{PLANET_METAL_TEXT}</td>
+  <td class="top_metal_v2">{PLANET_METAL_TEXT}</td>
   <!-- IF ! $NAVBAR_RESOURCES_ALLY && ! $NAVBAR_RESOURCES_HIDE_STORAGE -->
   <td>{PLANET_METAL_MAX_TEXT}</td>
   <!-- ENDIF -->
@@ -22,7 +22,7 @@
 
 <tr class="c_r" data-resource="crystal">
   <th class="c_l">{L_sys_crystal}</th>
-  <td id='top_crystal'>{PLANET_CRYSTAL_TEXT}</td>
+  <td class="top_crystal_v2">{PLANET_CRYSTAL_TEXT}</td>
   <!-- IF ! $NAVBAR_RESOURCES_ALLY && ! $NAVBAR_RESOURCES_HIDE_STORAGE -->
   <td>{PLANET_CRYSTAL_MAX_TEXT}</td>
   <!-- ENDIF -->
@@ -33,7 +33,7 @@
 
 <tr class="c_r" data-resource="deuterium">
   <th class="c_l">{L_sys_deuterium}</th>
-  <td id='top_deuterium'>{PLANET_DEUTERIUM_TEXT}</td>
+  <td id='top_deuterium_v2'>{PLANET_DEUTERIUM_TEXT}</td>
   <!-- IF ! $NAVBAR_RESOURCES_ALLY && ! $NAVBAR_RESOURCES_HIDE_STORAGE -->
   <td>{PLANET_DEUTERIUM_MAX_TEXT}</td>
   <!-- ENDIF -->
