--- a/design/templates/OpenGame/_page_90_footer.tpl.html
+++ b/design/templates/OpenGame/_page_90_footer.tpl.html
@@ -11,7 +11,7 @@
     </div><!-- __page -->
 
     <div id="debug" style="text-align: left"></div>
-    <script type="application/javascript">
+    <script type="text/javascript">
       document_ready();
       jQuery(document).ready(function () {
         jQuery('.benchmark').append(', JS run: ' + ((new Date().valueOf() - timeBrowser.valueOf()) / 1000) + 's');
