--- a/design/templates/OpenGame/navbar_resources.tpl.html
+++ b/design/templates/OpenGame/navbar_resources.tpl.html
@@ -57,28 +57,9 @@
     }
   };
 
-//  $.extend(navbarResources.metal, {
-//    start_value: 0.99,
-//    per_second: 3600 / 3600,
-//    max_value: 100,
-//    round: 0
-//  });
-//  $.extend(navbarResources.crystal, {
-//    start_value: 0.99,
-//    per_second: 3600 / 3600,
-//    max_value: 100,
-//    round: 0
-//  });
-//  $.extend(navbarResources.deuterium, {
-//    start_value: 0.99,
-//    per_second: 3600 / 3600,
-//    max_value: 100,
-//    round: 0
-//  });
-
-  sn_timers.unshift({id: 'top_metal', type: TIMER_COUNTER, options: navbarResources.metal});
-  sn_timers.unshift({id: 'top_crystal', type: TIMER_COUNTER, options: navbarResources.crystal});
-  sn_timers.unshift({id: 'top_deuterium', type: TIMER_COUNTER, options: navbarResources.deuterium});
+  sn_timers.unshift({className: 'top_metal_v2', type: TIMER_COUNTER, options: navbarResources.metal});
+  sn_timers.unshift({className: 'top_crystal_v2', type: TIMER_COUNTER, options: navbarResources.crystal});
+  sn_timers.unshift({className: 'top_deuterium_v2', type: TIMER_COUNTER, options: navbarResources.deuterium});
 </script>
 
 <!-- navbar_resources EOF -->
